fix vertical bar appearing behind floating index

--- a/app/assets/stylesheets/app.less
+++ b/app/assets/stylesheets/app.less
@@ -90,6 +90,7 @@
     #app-col-index {
       width: @index-min-width;
       min-width: @index-min-width;
+      flex-basis: @index-min-width;
 
       &[data-col-mode="floating"] {
         background: transparent;
